--- a/views/ticket/ticket_form/details.pug
+++ b/views/ticket/ticket_form/details.pug
@@ -1,35 +1,312 @@
+//- doctype html
+//- html(lang='en')
+//-   include ../../common/header.pug
+//-   +header(title)
+//-   body
+//-     header
+//-       include ../../common/navbar.pug
+//-       +navbar(user)
+//-       .container
+//-         .row.align-items-center
+//-           .col-md-8.order-md-1.text-center.text-md-left.pr-md-5
+//-             - let topics = ["Python", "C++", "Java", "Go", "Android Studio", "Javascript", "C"];
+//-             h1.display-7.m-b-2 Ticket Form
+
+//-             // register form
+//-             form(action='/ticket_form/details',method='POST' )
+//-               div.form-group.row
+//-                 label.col-sm-2.col-form-label(for='name') First Name:
+//-                 .col-sm-10
+//-                   input#name.form-control(type='text', placeholder='e.g. David', name='firstName', value=user.firstName, readonly)
+//-               div.form-group.row
+//-                 label.col-sm-2.col-form-label(for='name') Last Name:
+//-                 .col-sm-10
+//-                   input#name.form-control(type='text', placeholder='e.g. Beckham', name='lastName', value=user.lastName, readonly)
+//-               div.form-group.row
+//-                 label.col-sm-2.col-form-label(for='email') Email:
+//-                 .col-sm-10
+//-                   input#email.form-control(type='email', placeholder='name@email.com', name='email', value=user.email, readonly)
+//-               div.form-group.row
+//-                 label.col-sm-2.col-form-label(for='phoneNumber') Contact:
+//-                 .col-sm-10
+//-                   input#phoneNumber.form-control(type='text', placeholder='e.g. 91234567' name='phoneNumber', value=user.phoneNumber, readonly)
+//-               div.form-check
+//-                 input#priority.form-check-input(type='checkbox', name='priority')
+//-                 label(for='priority') <em>Bugs found?</em>
+//-               div.form-group
+//-                 label(for='topic') Topics:
+//-                 select(class = 'form-control' name='topic')
+//-                   each topic in topics
+//-                     option#topic.form-control(value=topic) #{topic}
+//-                 br
+
+//-                 label(for='priority') Subject:
+//-                 input#title.form-control(type='text', placeholder='Give a very short summary! (i.e. about Python class)' name='title')
+//-               div.form-group
+//-                 label(for='content') Description:
+//-                 textarea#content.form-control(name='content', placeholder="Be specific an succinct about the description of your problem!")
+                
+//-               button.btn.btn-outline-dark(type='submit') Submit
+
+
+
+//-     include ../../common/footer.pug
+//-     +footer()
+
 doctype html
 html(lang='en')
   include ../../common/header.pug
   +header(title)
   body
     header
-      include ../../common/navbar.pug
-      +navbar(user)
-      .container
-        .row.align-items-center
-          .col-md-8.order-md-1.text-center.text-md-left.pr-md-5
-            - let topics = ["Python", "C++", "Java", "Go", "Android Studio", "Javascript", "C"];
-            h1.display-7.m-b-2 Ticket Form
+    style.
+        @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro);
+        body,
+        html {
+          margin: 0;
+          height: 100%;
+        }
+        
+        input {
+          border: none;
+        }
+        
+        button:focus {
+          outline: none;
+        }
+        
+        ::-webkit-input-placeholder {
+          color: rgba(255, 255, 255, 0.65);
+        }
+        
+        ::-webkit-input-placeholder .input-line:focus +::input-placeholder {
+          color: #fff;
+        }
+        
+        .highlight {
+          color: rgba(255, 255, 255, 0.8);
+          font-weight: 400;
+          cursor: pointer;
+          transition: color .2s ease;
+        }
+        
+        .highlight:hover {
+          color: #fff;
+          transition: color .2s ease;
+        }
+        
+        .spacing {
+          -webkit-box-flex: 1;
+          -webkit-flex-grow: 1;
+          -ms-flex-positive: 1;
+          flex-grow: 1;
+          height: 120px;
+          font-weight: 600;
+          text-align: center;
+          margin-top: 10px;
+          color: rgba(255, 255, 255, 0.65)
+        }
+        
+        .input-line:focus {
+          outline: none;
+          border-color: #fff;
+          -webkit-transition: all .2s ease;
+          transition: all .2s ease;
+        }
+        
+        .ghost-round {
+          cursor: pointer;
+          background: none;
+          border: 1px solid rgba(255, 255, 255, 0.65);
+          border-radius: 25px;
+          color: rgba(255, 255, 255, 0.65);
+          -webkit-align-self: flex-end;
+          -ms-flex-item-align: end;
+          align-self: flex-end;
+          font-size: 19px;
+          font-size: 1.2rem;
+          font-family: 'Source Sans Pro', sans-serif;
+          font-weight: 600;
+          line-height: 2.5em;
+          margin-top: auto;
+          margin-bottom: 25px;
+          -webkit-transition: all .2s ease;
+          transition: all .2s ease;
+        }
+        
+        .ghost-round:hover {
+          background: rgba(255, 255, 255, 0.15);
+          color: #fff;
+          -webkit-transition: all .2s ease;
+          transition: all .2s ease;
+        }
+        
+        .input-line {
+          background: none;
+          margin-bottom: 10px;
+          line-height: 2.4em;
+          color: #fff;
+          font-family: 'Source Sans Pro', sans-serif;
+          font-weight: 600;
+          letter-spacing: 0px;
+          letter-spacing: 0.02rem;
+          font-size: 19px;
+          font-size: 1.2rem;
+          border-bottom: 1px solid rgba(255, 255, 255, 0.65);
+          -webkit-transition: all .2s ease;
+          transition: all .2s ease;
+        }
+        
+        .full-width {
+          width: 100%;
+        }
+        
+        .input-fields {
+          margin-top: 25px;
+        }
+        
+        .container {
+          display: flex;
+          -webkit-box-align: center;
+          -webkit-align-items: center;
+          -ms-flex-align: center;
+          align-items: center;
+          -webkit-box-pack: center;
+          -webkit-justify-content: center;
+          -ms-flex-pack: center;
+          justify-content: center;
+          background: #fff;
+          height: 100%;
+          width:100%;
+          min-height: 100px;
+          height: 100vh;
+          min-width: 100vw;
+        }
+        
+        .content {
+          padding-left: 25px;
+          padding-right: 25px;
+          display: -webkit-box;
+          display: -webkit-flex;
+          display: -ms-flexbox;
+          display: flex;
+          -webkit-flex-flow: column;
+          -ms-flex-flow: column;
+          flex-flow: column;
+          z-index: 5;
+        }
+        
+        .welcome {
+          font-weight: 500;
+          margin-top: 25px;
+          text-align: center;
+          font-size: 40px;
+          font-size: 2.5rem;
+          letter-spacing: 0px;
+          letter-spacing: 0.05rem;
+        }
+        
+        .subtitle {
+          text-align: center;
+          line-height: 1em;
+          font-weight: 400;
+          letter-spacing: 0px;
+          letter-spacing: 0.02rem;
+        }
+        
+        .menu {
+          background: rgba(0, 0, 0, 0.2);
+          width: 100%;
+          height: 50px;
+        }
+        
+        .window {
+          z-index: 100;
+          color: #000;
+          font-family: 'Source Sans Pro', sans-serif;
+          position: relative;
+          display: -webkit-box;
+          display: -webkit-flex;
+          display: -ms-flexbox;
+          display: flex;
+          -webkit-flex-flow: column;
+          -ms-flex-flow: column;
+          flex-flow: column;
+          box-shadow: 0px 15px 50px 10px rgba(0, 0, 0, 0.2);
+          box-sizing: border-box;
+          height: 700px;
+          width: 1000px;
+          background: #fff;
+          background: url('https://pexels.imgix.net/photos/27718/pexels-photo-27718.jpg?fit=crop&w=1280&h=823') top left no-repeat;
+        }
+        
+        .overlay {
+          background: -webkit-linear-gradient(#FEDA77, #F58529);
+          background: linear-gradient(#FEDA77, #F58529);
+          opacity: 0.85;
+          filter: alpha(opacity=85);
+          height: 1300px;
+          position: absolute;
+          width: 1000px;
+          z-index: 1;
+        }
+        
+        .bold-line {
+          background: #e7e7e7;
+          position: absolute;
+          top: 0px;
+          bottom: 0px;
+          margin: auto;
+          width: 100%;
+          height: 360px;
+          z-index: 1;
+          opacity:0.1;
+            background: url('https://pexels.imgix.net/photos/27718/pexels-photo-27718.jpg?fit=crop&w=1280&h=823') left no-repeat;
+          background-size:cover;
+        }
+        
+        .description {
+          max-height:auto;
+        }
+        @media (max-width: 500px) {
+          .window {
+            width: 100%;
+            height: 100%;
+          }
+          .overlay {
+            width: 100%;
+            height: 100%;
+          }
+        }
+    include ../../common/navbar.pug
+    +navbar(user)
+    .bold-line
+    .container
+     - let topics = ["Python", "C++", "Java", "Go", "Android Studio", "Javascript", "C"];
+      .window
+        .overlay
+        .content
+          .welcome Ticket Form
+          .progress
+              .progress-bar.bg-success.progress-bar-striped.progress-bar-animated(role='progressbar' style='width: 100%;' aria-valuenow='90' aria-valuemin='0' aria-valuemax='90') Step 3
 
-            // register form
-            form(action='/ticket_form/details',method='POST' )
+          form(action='/ticket_form/details',method='POST' )
               div.form-group.row
                 label.col-sm-2.col-form-label(for='name') First Name:
                 .col-sm-10
-                  input#name.form-control(type='text', placeholder='e.g. David', name='firstName', value=user.firstName, readonly)
+                  input#name.input-line.full-width(type='text', placeholder='e.g. David', name='firstName', value=user.firstName, readonly)
               div.form-group.row
                 label.col-sm-2.col-form-label(for='name') Last Name:
                 .col-sm-10
-                  input#name.form-control(type='text', placeholder='e.g. Beckham', name='lastName', value=user.lastName, readonly)
+                  input#name.input-line.full-width(type='text', placeholder='e.g. Beckham', name='lastName', value=user.lastName, readonly)
               div.form-group.row
                 label.col-sm-2.col-form-label(for='email') Email:
                 .col-sm-10
-                  input#email.form-control(type='email', placeholder='name@email.com', name='email', value=user.email, readonly)
+                  input#email.input-line.full-width(type='email', placeholder='name@email.com', name='email', value=user.email, readonly)
               div.form-group.row
                 label.col-sm-2.col-form-label(for='phoneNumber') Contact:
                 .col-sm-10
-                  input#phoneNumber.form-control(type='text', placeholder='e.g. 91234567' name='phoneNumber', value=user.phoneNumber, readonly)
+                  input#phoneNumber.input-line.full-width(type='text', placeholder='e.g. 91234567' name='phoneNumber', value=user.phoneNumber, readonly)
               div.form-check
                 input#priority.form-check-input(type='checkbox', name='priority')
                 label(for='priority') <em>Bugs found?</em>
@@ -37,21 +314,17 @@ html(lang='en')
                 label(for='topic') Topics:
                 select(class = 'form-control' name='topic')
                   each topic in topics
-                    option#topic.form-control(value=topic) #{topic}
+                    option#topic.input-line.full-width(value=topic) #{topic}
                 br
 
                 label(for='priority') Subject:
-                input#title.form-control(type='text', placeholder='Give a very short summary! (i.e. about Python class)' name='title')
+                input#title.input-line.full-width(type='text', placeholder='Give a very short summary! (i.e. about Python class)' name='title')
               div.form-group
                 label(for='content') Description:
-                textarea#content.form-control(name='content', placeholder="Be specific an succinct about the description of your problem!")
+                textarea#content.input-line.description(name='content', placeholder="Be specific an succinct about the description of your problem!")
                 
-              button.btn.btn-outline-dark(type='submit') Submit
-
-
+              button.ghost-round.full-width Submit
 
     include ../../common/footer.pug
     +footer()
-    //- script(src="../javascripts/tickets.js")
-
-
+    //- script(src="/javascripts/leads.js")
